# llc-controller

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
